--- a/brain/pyproject.toml
+++ b/brain/pyproject.toml
@@ -5,8 +5,9 @@ description = "Add your description here"
 readme = "README.md"
 requires-python = ">=3.9"
 dependencies = [
-    "google-genai>=1.47.0",
+    "anthropic>=0.28.0",
+    "fastapi>=0.128.0",
     "httpx>=0.28.1",
-    "openai>=2.16.0",
     "python-dotenv>=1.2.1",
+    "uvicorn>=0.39.0",
 ]
