--- a/tools/pyproject.toml
+++ b/tools/pyproject.toml
@@ -6,5 +6,6 @@ readme = "README.md"
 requires-python = ">=3.9"
 dependencies = [
     "fastapi>=0.128.0",
+    "httpx>=0.28.1",
     "uvicorn>=0.39.0",
 ]
