--- a/brain/pyproject.toml
+++ b/brain/pyproject.toml
@@ -3,11 +3,13 @@ name = "brain"
 version = "0.1.0"
 description = "Add your description here"
 readme = "README.md"
-requires-python = ">=3.9"
+requires-python = ">=3.11"
 dependencies = [
     "anthropic>=0.28.0",
+    "chromadb>=0.4.0",
     "fastapi>=0.128.0",
     "httpx>=0.28.1",
     "python-dotenv>=1.2.1",
+    "sentence-transformers>=2.2.0",
     "uvicorn>=0.39.0",
 ]
